# pybevy-polio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  demo.ipynb  demo2.py  demo3.R  pyproject.toml  test.py
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: tests.yml
R/: README.md  demo.R
app/: Cargo.toml  Trunk.toml  index.html
app/src/: main.rs
model/: Cargo.toml
model/src/: core.rs  lib.rs
model/src/polio/: disease.rs  params.rs
pybevy/: __init__.py  demo.py  demo2.py  demo3.py  demo4.py  test_wrappers.py
pybevy/repro/: fig1_prob_shedding_repro.py  infection_notebook_repro.py  viral_shedding_comparison.py
src/: app.rs  lib.rs  polio.rs
src/polio/: disease.rs  mod.rs  params.rs
tests/: README.md  __init__.py  conftest.py  test_function_layer.py  test_integration.py  test_parameter_layer.py  test_state_layer.py  testthat.R
tests/testthat/: setup-pybevy.R  test-function-layer.R  test-integration.R  test-parameter-layer.R  test-state-layer.R
