[package]
name = "pybevy"
version = "0.1.0"
edition = "2021"

[lib]
name = "pybevy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
bevy = { version = "0.13" }
bevy_egui = "0.27"
rand = "0.9"
rand_distr = "0.5.1"
numpy = "0.21"
ndarray = "0.15"

[dependencies.pyo3]
version = "0.21"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
