[package]
name = "pybevy"
version = "0.1.0"
edition = "2021"

[lib]
name = "pybevy"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.13", default-features = false}
log = "0.4"
env_logger = "0.11"
numpy = "0.21"  # rust numpy bindings
ndarray = "0.15"
model = { path = "model", features = ["pyo3"] }  # shared model crate

[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "abi3-py38"]

