[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pybevy"
version = "0.1.0"
description = "Interactive polio within-host disease model using Bevy game engine and PyO3"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Edward Wenger", email = "wenger.edward@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=6.0",
]
full = [
    "maturin>=1.0,<2.0",
    "pytest>=6.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "xarray>=0.19.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Repository = "https://github.com/edwenger/pybevy-polio"
Documentation = "https://github.com/edwenger/pybevy-polio#readme"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]