[package]
name = "pybevy-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = true }
bevy_egui = { version = "0.27", default-features = false, features = ["render", "default_fonts"] }
log = "0.4"
env_logger = "0.11"
# Reference to the shared model crate
model = { path = "../model" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.17", features = ["js"] }