[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false}
rand = "0.9"
rand_distr = "0.5.1"
log = "0.4"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = []
pyo3 = ["dep:pyo3"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }